2008-10-05  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix remote+ records.
	
	* libproto/remote/folder.c (remote_url_init): Remove.
	(_remote_is_scheme): New function.
	(_remote_mbox_record): Add _is_scheme method.
	* libproto/remote/mbox.c (remote_mbox_init): Remove useless
	check. 
	* mailbox/assoc.c (mu_assoc_clear): Return immediately if assoc
	tab is NULL.
	* mailbox/mailbox.c (_create_mailbox0): Do not enforce exact record
	scheme match if the scheme ends with a plus sign.

	Minor fixes in configuration.
	
	* doc/texinfo/programs.texi: Document Locking, ACL, and
	Tcp-wrappers.
	* mailbox/cfg_driver.c (mu_cfg_assert_value_type): Convert
	MU_CFG_STRING to MU_CFG_ARRAY.
	* mailbox/cfg_parser.y: Replace `tag: value' with `tag: vallist'.
	This allows for constructs like `acl a b c {', which were
	understood by the previous version.
	* mailbox/version.c (mu_conf_opt): Add WITH_LIBWRAP.

2008-09-29  Sergey Poznyakoff  <gray@gnu.org.ua>

	* config/mailutils-config.c (main): Do not print flag descriptions
	on --info, this breaks existing scripts.
	New option --verbose makes --info print verbose descriptions.
	* include/mailutils/version.h (mu_fprint_options)
	(mu_fprint_conf_option): Take additional argument.
	* mailbox/argcv.c (quote_transtab): Handle \".
	* mailbox/cfg_driver.c (mu_cfg_string_value_cb): Bugfix
	* mailbox/cfg_lexer.l: Allow * and = in non-quoted words.
	Improve 'stray character' diagnostics'.
	(unescape_to_line): Handle \\ and \".
	* mailbox/version.c (mu_fprint_options)
	(mu_fprint_conf_option): New argument `verbose' instructs whether
	to print textual descriptions.
	(mu_fprint_conf_option): Print single space after the flag to
	facilitate writing parser scripts.
	* testsuite/lib/mailutils.exp: Reflect this change.

2008-09-22  Sergey Poznyakoff  <gray@gnu.org.ua>

	* configure.ac: Define LOG_FACILITY_STRING, a string
	representation of syslog facility.
	* mailbox/cfg_lexer.l: Re-introduce pragmatic comment