@@ -1,3 +1,8 @@
+2008-10-14  Sergey Poznyakoff  <gray@gnu.org.ua>
+
+	* mailbox/url.c (url_parse0): Allow for
+	<user>:<password>;AUTH=<auth> syntax.
+
 2008-10-05  Sergey Poznyakoff  <gray@gnu.org.ua>
 
 	Fix remote+ records.
